add user roles endpoints
